@@ -1,3 +1,7 @@
+2012-12-26  Francois-Rene Rideau <tunes@google.com>
+
+	* swank-asdf.lisp: Better support for different versions of ASDF.
+
 2012-12-16  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-repl.lisp (thread-for-evaluation): Override some cases.
